Initial commit for movie genre classifier

--- a/MOVIE GENRE CLASSIFICATION.ipynb
+++ b/MOVIE GENRE CLASSIFICATION.ipynb
@@ -2,71 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d9c1d0c0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.4457253527621507\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Uma Mishra\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\Uma Mishra\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\Uma Mishra\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "      action       0.00      0.00      0.00       263\n",
-      "       adult       0.00      0.00      0.00       112\n",
-      "   adventure       0.00      0.00      0.00       139\n",
-      "   animation       0.00      0.00      0.00       104\n",
-      "   biography       0.00      0.00      0.00        61\n",
-      "      comedy       0.66      0.03      0.06      1443\n",
-      "       crime       0.00      0.00      0.00       107\n",
-      " documentary       0.54      0.90      0.67      2659\n",
-      "       drama       0.38      0.89      0.53      2697\n",
-      "      family       0.00      0.00      0.00       150\n",
-      "     fantasy       0.00      0.00      0.00        74\n",
-      "   game-show       0.00      0.00      0.00        40\n",
-      "     history       0.00      0.00      0.00        45\n",
-      "      horror       0.00      0.00      0.00       431\n",
-      "       music       0.00      0.00      0.00       144\n",
-      "     musical       0.00      0.00      0.00        50\n",
-      "     mystery       0.00      0.00      0.00        56\n",
-      "        news       0.00      0.00      0.00        34\n",
-      "  reality-tv       0.00      0.00      0.00       192\n",
-      "     romance       0.00      0.00      0.00       151\n",
-      "      sci-fi       0.00      0.00      0.00       143\n",
-      "       short       0.00      0.00      0.00      1045\n",
-      "       sport       0.00      0.00      0.00        93\n",
-      "   talk-show       0.00      0.00      0.00        81\n",
-      "    thriller       0.00      0.00      0.00       309\n",
-      "         war       0.00      0.00      0.00        20\n",
-      "     western       0.00      0.00      0.00       200\n",
-      "\n",
-      "    accuracy                           0.45     10843\n",
-      "   macro avg       0.06      0.07      0.05     10843\n",
-      "weighted avg       0.31      0.45      0.31     10843\n",
-      "\n",
-      "Predictions saved to test_data_with_predictions.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -76,20 +15,44 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
-    "import joblib\n",
-    "\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "34cc046f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load dataset\n",
     "def load_data(filepath):\n",
     "    df = pd.read_csv(\"train_data.txt\", sep=' ::: ', header=None, engine='python')\n",
     "    df.columns = ['ID', 'Title', 'Genre', 'Description']\n",
-    "    return df\n",
-    "\n",
-    "# Preprocess data\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "aaa84a88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preprocess data with stratified sampling\n",
     "def preprocess_data(df):\n",
     "    X = df['Description']\n",
     "    y = df['Genre']\n",
-    "    return train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
+    "    return train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1bd17f76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Train model\n",
     "def train_model(X_train, y_train, model_type='naive_bayes'):\n",
     "    vectorizer = TfidfVectorizer()\n",
@@ -106,14 +69,96 @@
     "    \n",
     "    model.fit(X_train_tfidf, y_train)\n",
     "    return vectorizer, model\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0a2654c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Evaluate model\n",
     "def evaluate_model(vectorizer, model, X_test, y_test):\n",
     "    X_test_tfidf = vectorizer.transform(X_test)\n",
     "    y_pred = model.predict(X_test_tfidf)\n",
+    "    print(\"Model Evaluation:\")\n",
     "    print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-    "    print(classification_report(y_test, y_pred))\n",
-    "\n",
+    "    print(\"Classification Report:\\n\",classification_report(y_test, y_pred))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9fd4f969",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Evaluation:\n",
+      "Accuracy: 0.4453564511666513\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Uma Mishra\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\Uma Mishra\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\Uma Mishra\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "      action       0.00      0.00      0.00       263\n",
+      "       adult       0.00      0.00      0.00       118\n",
+      "   adventure       0.00      0.00      0.00       155\n",
+      "   animation       0.00      0.00      0.00       100\n",
+      "   biography       0.00      0.00      0.00        53\n",
+      "      comedy       0.72      0.03      0.05      1490\n",
+      "       crime       0.00      0.00      0.00       101\n",
+      " documentary       0.53      0.91      0.67      2619\n",
+      "       drama       0.38      0.89      0.53      2723\n",
+      "      family       0.00      0.00      0.00       157\n",
+      "     fantasy       0.00      0.00      0.00        65\n",
+      "   game-show       0.00      0.00      0.00        39\n",
+      "     history       0.00      0.00      0.00        49\n",
+      "      horror       0.00      0.00      0.00       441\n",
+      "       music       0.00      0.00      0.00       146\n",
+      "     musical       0.00      0.00      0.00        55\n",
+      "     mystery       0.00      0.00      0.00        64\n",
+      "        news       0.00      0.00      0.00        36\n",
+      "  reality-tv       0.00      0.00      0.00       177\n",
+      "     romance       0.00      0.00      0.00       134\n",
+      "      sci-fi       0.00      0.00      0.00       129\n",
+      "       short       1.00      0.00      0.00      1015\n",
+      "       sport       0.00      0.00      0.00        86\n",
+      "   talk-show       0.00      0.00      0.00        78\n",
+      "    thriller       0.00      0.00      0.00       318\n",
+      "         war       0.00      0.00      0.00        26\n",
+      "     western       0.00      0.00      0.00       206\n",
+      "\n",
+      "    accuracy                           0.45     10843\n",
+      "   macro avg       0.10      0.07      0.05     10843\n",
+      "weighted avg       0.42      0.45      0.30     10843\n",
+      "\n",
+      "Predictions saved to test_data_with_predictions.csv\n"
+     ]
+    }
+   ],
+   "source": [
     "# Predict new genres from test data\n",
     "def predict_from_file(file_path, vectorizer, model):\n",
     "    test_data = load_data(file_path)\n",
@@ -144,7 +189,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34cc046f",
+   "id": "d5870c72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c3ecf86",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea20a902",
    "metadata": {},
    "outputs": [],
    "source": []
